Workes great! Added util calss for nutreient calculatror. Now first looking for same name and if so adding the unitname